Numerous small improvements

--- a/ThesisBrief.tex
+++ b/ThesisBrief.tex
@@ -167,29 +167,27 @@
 является важной темой современного изучения волн.
 Начиная с 1970\babelhyphen{nobreak}х годов опубликован ряд работ, в которых выводились упрощённые асимптотические модели типа Буссинеска и Кортевега--де Фриза для описания длинных продольных волн малой амплитуды в волноводах разной геометрии~\cite{OS, NS, S_book, P_book, SP, DC, DF, KSZ}. Эти модели имеют семейства точных решений в виде уединённых волн --- солитонов деформации.
 
-В литературе обсуждается гипотетическая возможность применения солитонов деформации в задачах дефектоскопии, поскольку, как показано в недавних работах \cite{KS, KT1, KT2}, солитоны сохраняют память о прохождении через область с дефектом (например, с расслоением). В ФТИ им. Иоффе много лет ведётся работа по экспериментальному обнаружению солитонов деформации \cite{JAP2010, JAP2012}, однако до сих пор надёжных данных об их существовании нет. Ввиду этого представляет интерес построение моделей, учитывающих внешнее воздействие на волновод, с целью моделирования возникновения солитонов в результате действия внешних сил. 
+В литературе обсуждается гипотетическая возможность применения солитонов деформации в задачах дефектоскопии, поскольку, как показано в недавних работах \cite{KS, KT1, KT2}, солитоны сохраняют память о прохождении через область с дефектом (например, с расслоением). В ФТИ им. Иоффе много лет ведётся работа по экспериментальному обнаружению солитонов деформации \cite{JAP2010, JAP2012}, однако до сих пор надёжных данных об их существовании нет. Ввиду этого представляет интерес построение моделей, учитывающих внешнее воздействие на волновод, с целью моделирования возникновения солитонов в результате воздействия внешних сил. 
 
-В настоящей работе мы рассмотрели нелинейные волны в однородных стержнях круглого сечения. Во-первых, следуя асимптотическому подходу, схожего с использовавшимся в ранее опубликованных работах, мы получили новую модели типа Буссинеска, учитывающую осесимметричную нагрузку на боковой поверхности стержня. Во-вторых, на основе многодоменного псевдоспектрального метода нам удалось построить эффективный численный метод для решения полных уравнений, описывающих динамику нелинейно упругого стержня. Мы провели численное моделирование ряда начально-краевых задач, в ходе которых возникали солитоны, и сравнили параметры солитонов в полной модели и упрощённой модели Буссинеска.
-
+В настоящей работе мы рассмотрели нелинейные волны в однородных стержнях круглого сечения. Во-первых, следуя асимптотическому подходу, схожему с использовавшимся в ранее опубликованных работах, мы получили новую модель типа Буссинеска, учитывающую осесимметричную нагрузку на боковой поверхности стержня. Во-вторых, на основе многодоменного псевдоспектрального метода нам удалось построить эффективный численный метод для решения полных уравнений, описывающих динамику нелинейно упругого стержня. Мы провели численное моделирование ряда начально-краевых задач, в ходе которых возникали солитоны, и сравнили параметры солитонов в полной модели и упрощённой модели типа Буссинеска.
 
 \section{Нелинейная теория упругости}
 В рамках линейной теории упругости потенциальная энергия деформации включает в себя только слагаемые второго порядка относительно градиента вектора перемещения, в то время как в нелинейной теории учитываются слагаемые более высоких порядков. В случае слабой нелинейности (малых, но конечных деформаций) общей моделью для потенциальной энергии является модель Мурнагана:
 \begin{equation}\label{murnaghan}
 W = \frac{\lambda + 2\mu}{2}I_1(\tens{E})^2 - 2\mu I_2(\tens{E}) + \frac{l+2m}{3}I_1(\tens{E})^3 - 2m I_1(\tens{E}) I_2(\tens{E}) + n I_3(\tens{E}),
 \end{equation}
-где $I_1(\tens{E}) = \trace \tens{E},\  I_2(\tens{E}) = \lsq(\trace \tens{E})^2 - \trace \tens{E}^2\rsq/\,2,\ I_3(\tens{E}) = \trace \tens{E}$ --- инварианты тензора; $\lambda$ и $\mu$ --- коэффициенты упругости Ламе; $l$, $m$, $n$ --- упругие модули Мурнагана; тензор конечных деформаций Грина записывается следующим образом ($\vect{U}$ --- вектор перемещения):
+где $I_1(\tens{E}) = \trace \tens{E},\  I_2(\tens{E}) = \lsq(\trace \tens{E})^2 - \trace \tens{E}^2\rsq/\,2,\ I_3(\tens{E}) = \det \tens{E}$ --- инварианты тензора; $\lambda$ и $\mu$ --- коэффициенты упругости Ламе; $l$, $m$, $n$ --- упругие модули Мурнагана; а тензор конечных деформаций Грина записывается следующим образом ($\vect{U}$ --- вектор перемещения):
 \begin{equation}\label{1_strain}
 \tens{E} = \frac12 \lb(\nabla\vect{U})^T + \nabla\vect{U} + (\nabla\vect{U})^T\cdot\nabla\vect{U}\rb.
 \end{equation}
-
 Полные уравнения движения стержня в отсутствие массовых сил записываются в векторном виде следующим образом:
 \begin{equation}\label{full_eqns}
-\rho\ddot{\vect{U}} = \divg\tens{P}, \qquad \tens{P} = (\tens{I} + \nabla\vect{U}) \cdot \pdiff{W}{\tens{E}}
+\rho\ddot{\vect{U}} = \divg\tens{P}, \qquad \tens{P} = (\tens{I} + \nabla\vect{U}) \cdot \pdiff{W}{\tens{E}},
 \end{equation}
 где $P$ --- первый тензор напряжений Пиолы-Кирхгофа, а $\tens{I}$ --- единичный тензор.
 
 
-\section{Вывод модели типа Буссинеска с внешним воздействием}
+\section{Вывод упрощённой системы двух связанных уравнений}
 
 Рассмотрим стержень круглого поперечного сечения радиуса $R$. Введём цилиндрическую систему координат $(x, r, \varphi)$, где $x$ -- осевая координата, $r$ -- продольная, $\varphi$ -- угловая, как показано на рисунке \ref{fig:rod}. Положим стержень бесконечным вдоль оси $x$. Используя Лагранжев подход, введём вектор перемещения точек тела: $\vect{U} = (U, V, W)$, где $U$ -- осевое (продольное) перемещение, $V$ -- радиальное (поперечное) перемещение, а $W$ -- вращение.
 \begin{figure}[h]
@@ -272,6 +270,8 @@ U_4 &= \frac{1}{16\mu}\left[\rho c^2 U_{2tt} - (\lambda + 2\mu) U_{2xx} - 4(\lam
 \end{align}
 Эта система связанных уравнений представляет собой довольно сложную модель, однако она может быть сведена к одному уравнению типа Буссинеска.
 
+
+\section{Вывод уравнения типа Буссинеска}
 Существует два естественных способа вывода модели типа Буссинеска. В первом способе исключение функции $V_1$ из уравнений \eqref{2_bc_rr_subst} и \eqref{2_bc_rx_subst} осуществляется с помощью асимптотического выражения, следующего из уравнения \eqref{2_bc_rr_subst}:
 \begin{equation} \label{v1_asympt}
 V_1(x, t) = \frac{\mu(3\lambda + 2\mu) P}{2(\lambda + \mu)^2} - \frac{\lambda U_{0x}}{2(\lambda + \mu)} + \varepsilon f(x,t) + \delta^2 g(x,t) + O(\varepsilon^2, \varepsilon\delta^2, \delta^4),
@@ -314,7 +314,7 @@ L_{2} V_1 + \varepsilon\Psi_2(U_0, V_1) &= a_2 T + M_2 U_0 + O(\varepsilon^2, \v
 %\end{equation}
 Теперь, предполагая, что коэффициенты при нелинейных и дисперсионных слагаемых в уравнениях \eqref{eq_u0_asympt} и \eqref{eq_u0_bostr} являются величинами одного порядка ($ \varepsilon \sim \delta^2 $), можно отбросить слагаемые $O(\varepsilon^2, \varepsilon\delta^2, \delta^4)$. 
 
-Полученные уравнения записаны относительно перемещения $U_0$, однако основной интерес представляют значения не перемещения, а деформации. Продифференцируем уравнения \eqref{eq_u0_asympt} и \eqref{eq_u0_bostr} по $x$ и введём новую функцию $u = U_{0x}$, характеризующую продольную деформацию. Получаемые в результате уравнения мы запишем в размерном виде, а вместо упругих модулей Ламе $\lambda$ и $\mu$ подставим их выражения через модуль Юнга $E$ и коэффициент Пуассона $\nu$:
+Полученные уравнения записаны относительно перемещения $U_0$, однако основной интерес представляют значения не перемещения, а деформации. Продифференцируем уравнения \eqref{eq_u0_asympt} и \eqref{eq_u0_bostr} по $x$ и введём новую функцию $u = U_{0x}$, характеризующую продольную деформацию. Получаемые в результате уравнения мы запишем в размерном виде, вместо упругих модулей Ламе $\lambda$ и $\mu$ подставим их выражения через модуль Юнга $E$ и коэффициент Пуассона $\nu$, а также учтём, что $c=\sqrt{E/\rho}$:
 \begin{equation}\label{eq_dim}
 \begin{split}
 &u_{tt} - c^2 u_{xx} - \frac{2}{\rho}\bigg(\nu P_{xx} + \frac1R T_x\bigg) - \left(\frac{\beta_1}{2\rho} u^2 + \frac{\beta_2}{\rho E} u P + \frac{\beta_3}{2\rho E^2} P^2\right)_{xx}\\
@@ -344,21 +344,24 @@ u_{tt} - c^2 u_{xx} = \frac{\beta_1}{2\rho}\left(u^2\right)_{xx} -  R^2 \bigg(\f
 \end{equation}
 
 Сравним оба уравнения \eqref{eq_dim_free_surf} с <<уравнением с двумя дисперсиями>>, полученным Самсоновым и Порубовым~\cite{SP}
-и <<регуляризованным>> уравнением, выведенным Островским и Сутиным~\cite{OS}. Эти уравнения могут быть записаны в форме уравнений \eqref{eq_dim_free_surf} с помощью следующих дисперсионных коэффициентов:
+и <<регуляризованным>> уравнением, выведенным Островским и Сутиным~\cite{OS}. Эти уравнения могут быть записаны в форме уравнений \eqref{eq_dim} с помощью следующих дисперсионных коэффициентов:
 \begin{align} \nonumber
 &\alpha_1^{(3)} = 0,& &\alpha_2^{(3)} = \frac{(1-\nu)\nu}{2},&  &\alpha_3^{(3)} = -\frac \nu 2,\\
 \nonumber
 &\alpha_1^{(4)} = 0,& &\alpha_2^{(4)} = -\frac{\nu^2}{2},&  &\alpha_3^{(4)} = 0,
 \end{align}
-для уравнений Самсонова--Порубова и регуляризованного уравнения соответственно.
+для уравнения Самсонова--Порубова и регуляризованного уравнения соответственно.
 
-Поясним подробнее что значит <<регуляризация>>. Все четыре приведённые выше модели не являются асимптотически точными уравнениями, т.е. в безразмерной форме они содержат как члены $ O(1) $, так и $ O(\varepsilon, \delta) $. Следовательно, все эти уравнения могут быть <<регуляризованы>> (сведены) к одному уравнению, в котором есть только одно дисперсионное слагаемое, используя соотношение в главном порядке $ u_{tt} = c^2 u_{xx} + \mbox{<\,малые члены\,>} $. Коэффициент при этом дисперсионном слагаемом определяется суммой дисперсионных коэффициентов $\alpha_j$ и одинаков для всех четырех уравнений:
+Поясним подробнее что значит <<регуляризация>>. Все четыре приведённые выше модели не являются асимптотически точными уравнениями, т.е. в безразмерной форме они содержат как члены $ O(1) $, так и $ O(\varepsilon, \delta^2) $. Следовательно, все эти уравнения могут быть <<регуляризованы>> (сведены) к одному уравнению, в котором есть только одно дисперсионное слагаемое, используя асимптотическое соотношение $u_{tt} = c^2 u_{xx} + \mbox{<\,малые члены\,>}$. Коэффициент при этом дисперсионном слагаемом определяется суммой дисперсионных коэффициентов $\alpha_j$ и одинаков для всех четырех уравнений:
 \begin{equation} \label{alpha_sum}
 \alpha_1^{(i)} + \alpha_2^{(i)} + \alpha_3^{(i)} = -\frac{\nu^2}{2}, \quad i = \overline{1,4},
 \end{equation}
 что означает, что эти уравнения асимптотически эквивалентны.
 
-Поскольку модель с одним дисперсионным членом проще, чем модель с тремя дисперсионными членами, представляется целесообразным получить регуляризованную модель в случае ненулевых напряжений на поверхности:
+Регуляризация может быть применена и к уравнению с внешним воздействием \eqref{eq_dim} в виде $u_{tt} = c^2 u_{xx} +  \frac{2}{\rho}\lb\nu P_{xx} + \frac1R T_x\rb + \mbox{<\,мал. члены\,>}$. Получаемое таким образом уравнение имеет вид:
+%Применяя асимптотическое соотношение $u_{tt} = c^2 u_{xx} +  \frac{2}{\rho}\lb\nu P_{xx} + \frac1R T_x\rb + \mbox{<\,мал. члены\,>}$ к уравнению \eqref{eq_dim}, получаем регуляризованную модель с внешним воздействием:
+%Регуляризация может быть применена и к уравнению с внешним воздействием \eqref{eq_dim}:%, что приводит к
+%Поскольку модель с одним дисперсионным членом проще, чем модель с тремя дисперсионными членами, представляется целесообразным получить регуляризованную модель в случае ненулевых напряжений на поверхности:
 \begin{equation}\label{2_eq_fin_reg}
 \begin{split}
 &u_{tt} - c^2 u_{xx} - \frac{2}{\rho}\bigg(\nu P_{xx} + \frac1R T_x\bigg) - \left(\frac{\beta_1}{2\rho} u^2 + \frac{\beta_2}{\rho E} u P + \frac{\beta_3}{2\rho E^2} P^2\right)_{xx} - \frac{\nu^2 R^2}{2} u_{xxtt}\\
@@ -431,7 +434,7 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 \end{figure}
 \begin{table}[h]
 	\captionsetup{justification=raggedleft,singlelinecheck=false}
-	\caption{Упругие модули полистирола~\cite{HughesKelly}.}
+	\caption{Упругие модули полистирола.}
 	\vspace{-7mm}
 	\begin{center}
 		\begin{tabular}{|c|c|c|c|c|c|}
@@ -489,23 +492,24 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 
 
 %\subsection{Образование солитона из длинной волны}
-На рисунке \ref{fig:evol_compare} представлено сравнение эволюции заданной в начальный момент времени волны согласно полной модели \eqref{murnaghan} -- \eqref{full_eqns} и регуляризованной модели Буссинеска \eqref{2_eq_fin_reg} при отсутствии граничных напряжений. В рамках обеих моделей возникают солитоны, двигающиеся быстрее линейной скорости $c=\sqrt{E/\rho}$. В первом случае (левый график) модель Буссинеска дала солитон на 8\% большей амплитуды и, как следствие, бегущий несколько быстрее солитона в полной модели. Во втором случае (правый график), отличающегося от первого большей амплитудой начальной волны, отличие полной модели от модели Буссинеска значительно больше. 
+На рисунке \ref{fig:evol_compare} представлено сравнение эволюции заданной в начальный момент времени волны согласно полной модели \eqref{murnaghan} -- \eqref{full_eqns} и регуляризованной модели Буссинеска \eqref{2_eq_fin_reg} при отсутствии граничных напряжений. В рамках обеих моделей возникают солитоны, двигающиеся быстрее линейной скорости $c=\sqrt{E/\rho}$. В первом случае (левый график) модель Буссинеска дала солитон на 8\% большей амплитуды и, как следствие, бегущий несколько быстрее солитона в полной модели. Во втором случае (правый график), отличающегося от первого большей амплитудой начальной волны, отличие полной модели от модели Буссинеска намного значительнее. 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.43\linewidth]{figures/SolEvolCompareSmall}
-	\includegraphics[width=0.43\linewidth]{figures/SolEvolCompareSmall2}
+	\includegraphics[width=0.44\linewidth]{figures/SolEvolCompareSmall}
+	\includegraphics[width=0.44\linewidth]{figures/SolEvolCompareSmall2}
 	\caption{Профили решений $-u(x-ct, t)$ регуляризованного уравнения Буссинеска и продольной деформации $-U_x(x - ct, 0, t)$ в центре стержня ($r=0$) в различные моменты времени. Масштаб амплитуды деформации показан чёрным прямоугольником.}
 	\label{fig:evol_compare}
+	\vspace{-2mm}
 \end{figure}
 
-Отличительной особенностью нелинейных волн является зависимость скорости от амплитуды волны. На рисунке \ref{fig:sol_compare} построены эти зависимости для модели Буссинеска и полной модели.
-\begin{figure}[h]
+На рисунке \ref{fig:sol_compare} представлено сравнение зависимости скорости солитона от амплитуды в модели Буссинеска и в полной модели. На этом рисунке отчётливо виден асимптотический характер модели Буссинеска.
+\begin{figure}[h!]
 	\centering
-	%\includegraphics[width=0.345\linewidth]{figures/SolCompareSmall}
-	%\includegraphics[width=0.345\linewidth]{figures/SolCompareSmall2}
-	\includegraphics[width=0.5\linewidth]{figures/VelAmpl}
+	\includegraphics[width=0.54\linewidth]{figures/VelAmplSmall}
+	\vspace{-2mm}
 	\caption{Зависимость скорости солитона от амплитуды. Горизонтальная линия --- скорость линейных волн $c$.}
 	\label{fig:sol_compare}
+	\vspace{-3mm}
 \end{figure}
 
 
@@ -520,13 +524,19 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 %\end{figure}
 
 
-Представляет большой интерес возможность возбуждения солитонов в результате внешнего воздействия. На рисунке \ref{fig:impact} представлены результаты моделирования при наличии коротких воздействий (ударов) на торец и на боковую поверхность стержня. Отметим, что в модели Буссинеска стержень предполагается бесконечным и, следовательно, не имеет торцов, однако, мы можем сымитировать удар, задав короткую начальную волну, похожую на ту, что возникает при ударе в полной модели.
+Представляет большой интерес возможность возбуждения солитонов в результате внешнего воздействия. На рисунках \ref{fig:impact} и \ref{fig:impact_surf} представлены результаты моделирования при наличии коротких воздействий (ударов) на торец и на боковую поверхность стержня. Отметим, что в модели Буссинеска стержень предполагается бесконечным и, следовательно, не имеет торцов, однако, мы можем сымитировать удар, задав короткую начальную волну, похожую на ту, что возникает при ударе в полной модели.
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.85\linewidth]{figures/ImpactSmall}
-	\includegraphics[width=0.85\linewidth]{figures/SurfImpactSmall}
-	\caption{Моделирование удара по торцу (верхний график) и по по боковой поверхности (нижний график). Вертикальный и горизонтальные подграфики показывают зависимость нормальных напряжений на границе от времени и координаты $x$. При ударе по торцу напряжение задаётся одинаковым на всей площади торца.}
+	\caption{Удар по торцу. Вертикальный подграфик показывает зависимость нормального напряжения на левом торце  от времени.}
 	\label{fig:impact}
+	\vspace{-3mm}
+\end{figure}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.85\linewidth]{figures/SurfImpactSmall}
+	\caption{Удар по боковой поверхности. Вертикальный и горизонтальные подграфики показывают зависимость нормального напряжения на боковой поверхности от времени и координаты $x$.}
+	\label{fig:impact_surf}
 	\vspace{-7mm}
 \end{figure}
 
@@ -561,7 +571,7 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 	\bibitem{P_book} Porubov A.\,V., Amplification of nonlinear strain waves in solids, Singapore: World Scientific, 2003.	
 	%\bibitem{S1} Samsonov~A.\,M., Structural optimization in nonlinear wave propagation problems. In: \textit{Structural Optimization under Dynamical Loading. Seminar and Workshop for Junior Scientists}, U. Lepik ed., Tartu University Press, 75-76 (1982).
 	%\bibitem{S2} Samsonov~A.\,M., Soliton evolution in a rod with variable cross section, \textit{Sov. Physics - Doklady} 29 (1984) 586-587.
-	\bibitem{SP} Samsonov~A.\,M., Porubov~A.\,V., Refinement of the model for the propagation of longitudinal strain waves in a rod with nonlinear elasticity, \textit{Tech. Phys. Lett.} 19(6) (1993) 365-366.
+	\bibitem{SP} Samsonov~A.\,M., Porubov~A.\,V., Refinement of the model for the propagation of longitudinal strain waves in a rod with nonlinear elasticity, Tech. Phys. Lett., 1993, 19~(6), 365-366.
 	%\bibitem{PV} Porubov~A.\,V., M.G. Velarde, Dispersive - dissipative solitons in nonllinear solids, \textit{Wave Motion} 31(3) (2000) 197-207.
 	\bibitem{DF} Dai~H.-H., Fan~X., Asymptotically approximate model equations for weakly nonlinear long waves in compressible elastic rods and their comparisons with other simplified model equations, \textit{Maths. Mechs. Solids} 9 (2004) 61-79.
 	\bibitem{DC} Dai~H.-H., and Z. Cai, Uniform asymptotic analysis for transient waves in a pre-stressed compressible hyperelastic rod, \textit{Acta Mechanica} 139 (2000) 201-230.
