--- a/ThesisBrief.tex
+++ b/ThesisBrief.tex
@@ -33,7 +33,8 @@
 % Formatting
 \usepackage[top=20mm,bottom=20mm,left=30mm,right=10mm]{geometry}
 \setlength{\parindent}{1.25cm}
-\onehalfspacing
+%\onehalfspacing
+\linespread{1.15}
 \usepackage{enumitem}
 
 % Hyperlinks
@@ -381,8 +382,7 @@ u_{tt} - \left(c^2 + \kappa\frac{\beta_1}{\rho}\right) u_{xx} - \frac{2}{\rho}\l
 + R^2 \left(\frac{\alpha_1^{(i)}}{c^2} u_{tttt} + \alpha_2^{(i)} u_{xxtt} + c^2\alpha_3^{(i)} u_{xxxx} + G^{(i)}(P, T) \right) = 0, \quad i = 1,2.
 \end{split}
 \end{equation}
-Предварительное растяжение изменило скорость длинных линейных волн, квадрат которой равен коэффициенту при $u_{xx}$. 
-Это явление, называемое акустоэластическим эффектом, лежит в основе экспериментального определения упругих модулей Мурнагана.
+Предварительное растяжение изменило скорость длинных линейных волн, квадрат которой равен коэффициенту при $u_{xx}$, сделав её зависимой от коэффициента $\beta_1$, содержащего упругие модули Мурнагана. Это явление, называемое акустоэластическим эффектом, лежит в основе экспериментального определения модулей Мурнагана.
 
 Насколько известно автору, обе модели, описываемые уравнениями (\ref{pre_stretch_eq_dim}), а также их упрощённые версии (\ref{eq_dim}), (\ref{eq_dim_free_surf}) и \eqref{2_eq_fin_reg} получены впервые. 
 %В следующем параграфе мы проанализируем свойства полученных уравнений и сравним их с уравнениями выведенными ранее.
@@ -397,6 +397,7 @@ u_{tt} - \left(c^2 + \kappa\frac{\beta_1}{\rho}\right) u_{xx} - \frac{2}{\rho}\l
 	\includegraphics[width=0.65\linewidth]{2_DispBlackSmall}
 	\caption{Дисперсионные кривые для стержня с $\nu = 0.34$.}
 	\label{fig:disp}
+	\vspace{-2mm}
 \end{figure} 
 
 Все модели достаточно хорошо описывают нижнюю ветвь дисперсионной кривой в длинноволновой области, однако наиболее точной является модель (\ref{eq_dim_free_surf}, $i=2$), что объясняется более аккуратной процедурой исключения функции $V_1$ из уравнений \eqref{2_bc_rr_subst} и \eqref{2_bc_rx_subst}. Уравнение Самсонова -- Порубова обладает коротковолновой неустойчивостью, в то время как остальные три модели не имеют такого эффекта. 
@@ -451,48 +452,31 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 	\vspace{-7mm}
 \end{table}
 
-%На рисунке~\ref{fig:rod_deformed} показано, как выглядит деформированный стержень, когда по нему бежит солитон сжатия. Увеличенные перемещения позволяют увидеть эффект Пуассона (утолщение тела при продольном сжатии), а также нелинейную зависимость продольного перемещения от~$r$ (вертикальные линии немного изгибаются в месте сжатия). На всякий случай напомним, что на рисунке~\ref{fig:soliton} изображён график продольной деформации на оси стержня, а не форма границы стержня на рисунке~\ref{fig:rod_deformed}. 
-%\begin{figure}[hh]
-%	\centering
-%	\includegraphics[width=0.6\linewidth]{4a_DeformedRod1}
-%	\includegraphics[width=0.6\linewidth]{4b_DeformedRod2}
-%	\caption{Стержень из полистирола при прохождении солитона деформации~(\ref{soliton},~${i=1}$) с амплитудным параметром $A=-0.03$. Продольные перемещения увеличены в 30 раз, поперечные в 60 раз.}
-%	\label{fig:rod_deformed}
-%\end{figure}
-
-%Репараметризуем солитонное решение \eqref{soliton} через скорость $v$ вместо амплитуды $A$:
-%\begin{align}
-%\label{soliton_v}
-%u_i(x, t) &= \frac{3 \rho \left(v^2 - c^2\right)}{\beta_1} {\rm sech}^{2}\left[\tilde{B_i}(x\pm v t)\right], \qquad v = \sqrt{c^2+\frac{A\beta_1}{3 \rho}} \, ,\\
-%\label{Bimod}
-%\tilde{B}_i &= \sqrt{\frac{c^2(v^2- c^2)}{-4\left(\alpha_1^{(i)} v^4 + \alpha_2^{(i)} c^2 v^2 + \alpha_3^{(i)}c^4\right)R^2}} \, , \quad i = \overline{1,4}.
-%\end{align}
-%%$$ B = \sqrt{\frac{3c^2(v^2- c^2)}{4((1+\nu+\nu^2) c^2 v^2 - (1+\nu)(c^4+v^4))H^2}} $$
-%%Regularized:
-%%\begin{equation}%\label{}
-%%u(x, t) = \frac{3 \left(v^2 - c^2\right)}{2\beta} \cosh^{-2}\left(\frac{1}{\nu v H}\sqrt{\frac{3(v^2- c^2)}{8}}(x\pm v t)\right),
-%%\end{equation}
-%Солитонное решение существует, только если параметр длины $\tilde{B}$ вещественен, что приводит, предполагая $\nu < 0.5$, к следующим ограничениям на скорость солитона:
-%\begin{itemize}
-%	%\item $\tilde{B}_1^2 > 0 \implies$ $\displaystyle v^2 < \frac{(\nu^2 + \nu + 1) - \nu\sqrt{\nu^2 + 2\nu + 2}}{\nu + 1} c^2$ or $\displaystyle c^2 < v^2 < \frac{(\nu^2 + \nu + 1) + \nu\sqrt{\nu^2 + 2\nu + 2}}{\nu + 1} c^2$,
-%	\item $\tilde{B}_i^2 > 0 \implies$ $\displaystyle v^2 < \frac{-\alpha_2^{(i)} - \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} c^2$ или $\displaystyle c^2 < v^2 < \frac{-\alpha_2^{(i)} + \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} c^2$, $i=1,2$,
-%	\item $\tilde{B}_3^2 > 0 \implies$ $\displaystyle c^2 < v^2 < \frac{c^2}{1-\nu}$, 
-%	\item $\tilde{B}_4^2 > 0 \implies$ $c^2 < v^2$,
-%\end{itemize}
-%причём $\displaystyle 0 < \frac{-\alpha_2^{(i)} - \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} \leqslant 1$ и $\displaystyle \frac{-\alpha_2^{(i)} + \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} \geqslant 1$ при $\nu\in[0, 0.5]$, $i=1,2$. 
-%Таким образом, в то время как первые три модели дают ограниченный диапазон скоростей, регуляризованная модель не накладывает ограничения сверху на скорость солитона. Также первые две модели, в отличие от двух других, допускают существование солитонов противоположного знака. 
-%
-%Помимо математического ограничения на параметры солитона (вещественность параметра длины $B$) есть физическое ограничение: солитон не должен вызывать пластических деформаций, поскольку модель строилась только для упругих деформаций. Так, для полистирола и широкого круга других материалов именно физическое ограничение сильнее всего сужает диапазон допустимых скоростей, поскольку, как видно из формулы \eqref{soliton_v}, чем больше разность ${v^2-c^2}$, тем больше амплитуда и меньше длина солитона.
 
 
 \section{Численное моделирование}
-Основной интерес для нас представляют непрерывные гладкие решения рассмотренных в предыдущих разделах уравнений, поэтому для численного моделирования мы воспользовались псевдоспектральным методом \cite{Canuto2007}.
+Основной интерес для нас представляют непрерывные гладкие решения рассмотренных в предыдущих разделах уравнений, поэтому для численного моделирования мы воспользовались многодоменным псевдоспектральным методом \cite{Canuto2007}, с помощью которого мы решали как полные трёхмерные уравнения \eqref{murnaghan} -- \eqref{full_eqns}, так и одномерное регуляризованное уравнение Буссинеска \eqref{2_eq_fin_reg}. Пример трёхмерной пространственной дискретизации (расположение узлов сетки в стержне) показан на рисунке \ref{fig:grid}.
+\begin{figure}[h!]
+	\centering
+	%\begin{subfigure}{0.5\textwidth}
+	\centering
+	\includegraphics[width=.35\textwidth]{figures/Grid3D}
+	%\caption{Lorem ipsum}
+	%\end{subfigure}
+	%\begin{subfigure}{0.48\textwidth}
+	%		\centering
+	%		\includegraphics[width=\textwidth]{figures/Grid2D}
+	%\caption{Lorem ipsum}
+	%	\end{subfigure}
+	\caption{Пример трёхмерной сетки из двух доменов, обозначенных разными цветами.}
+	\label{fig:grid}
+\end{figure}
 
 %Псевдоспектральный метод или метод коллокации, основан на поиске решения задачи в некотором подпространстве, имеющем конечный базис, в качестве которого чаще всего выбирается базис Фурье (набор синусов и косинусов) или семейство ортогональных многочленов. Этот метод используется только для пространственной дискретизации, в то время как дискретизация по времени проводится стандартными методами, например, Рунге-Кутты 4-го порядка. Мы будем использовать псевдоспектральный метод для решения начально-краевых задач как в полной трёхмерной модели \eqref{murnaghan} -- \eqref{full_eqns}, так и в модели Буссинеска. При пространственной дискретизации уравнений Буссинеска (\ref{eq_dim}, $i=1,2$) возникшая система ОДУ оказалась жёсткой и не поддающейся решению явными методами, поэтому в настоящей работе мы проводили моделирование лишь регуляризованного уравнения \eqref{2_eq_fin_reg}.
 
 
 %\subsection{Образование солитона из длинной волны}
-На рисунке \ref{fig:evol_compare} представлено сравнение эволюции заданной в начальный момент времени волны согласно полной модели \eqref{murnaghan} -- \eqref{full_eqns} и регуляризованной модели Буссинеска \eqref{2_eq_fin_reg} при отсутствии граничных напряжений. В рамках обеих моделей возникают солитоны, двигающиеся быстрее линейной скорости $c=\sqrt{E/\rho}$. В первом случае (левый график) модель Буссинеска дала солитон на 8\% большей амплитуды и, как следствие, бегущий несколько быстрее солитона в полной модели. Во втором случае (правый график), отличающегося от первого большей амплитудой начальной волны, отличие полной модели от модели Буссинеска намного значительнее. 
+На рисунке \ref{fig:evol_compare} представлено сравнение эволюции заданной в начальный момент времени волны согласно полным уравнениям и регуляризованному уравнению Буссинеска при отсутствии граничных напряжений. В рамках обеих моделей возникают солитоны, двигающиеся быстрее линейной скорости $c=\sqrt{E/\rho}$. В первом случае (левый график) модель Буссинеска дала солитон на 8\% большей амплитуды и, как следствие, бегущий несколько быстрее солитона в полной модели. Во втором случае (правый график), отличающегося от первого большей амплитудой начальной волны, отличие полной модели от модели Буссинеска намного значительнее. 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.44\linewidth]{figures/SolEvolCompareSmall}
@@ -502,10 +486,10 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 	\vspace{-2mm}
 \end{figure}
 
-На рисунке \ref{fig:sol_compare} представлено сравнение зависимости скорости солитона от амплитуды в модели Буссинеска и в полной модели. На этом рисунке отчётливо виден асимптотический характер модели Буссинеска.
+На рисунке \ref{fig:sol_compare} представлено сравнение зависимости скорости солитона от амплитуды в модели Буссинеска \eqref{soliton} и в полной модели. На этом рисунке отчётливо виден асимптотический характер модели Буссинеска.
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.54\linewidth]{figures/VelAmplSmall}
+	\includegraphics[width=0.53\linewidth]{figures/VelAmplSmall}
 	\vspace{-2mm}
 	\caption{Зависимость скорости солитона от амплитуды. Горизонтальная линия --- скорость линейных волн $c$.}
 	\label{fig:sol_compare}
@@ -524,21 +508,16 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 %\end{figure}
 
 
-Представляет большой интерес возможность возбуждения солитонов в результате внешнего воздействия. На рисунках \ref{fig:impact} и \ref{fig:impact_surf} представлены результаты моделирования при наличии коротких воздействий (ударов) на торец и на боковую поверхность стержня. Отметим, что в модели Буссинеска стержень предполагается бесконечным и, следовательно, не имеет торцов, однако, мы можем сымитировать удар, задав короткую начальную волну, похожую на ту, что возникает при ударе в полной модели.
+Представляет большой интерес возможность возбуждения солитонов в результате внешнего воздействия. На рисунке \ref{fig:impact} представлены результаты моделирования при наличии коротких воздействий (ударов) на торец и на боковую поверхность стержня. Отметим, что в модели Буссинеска стержень предполагается бесконечным и, следовательно, не имеет торцов, однако, мы можем сымитировать удар, задав короткую начальную волну, похожую на ту, что возникает при ударе в полной модели.
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.85\linewidth]{figures/ImpactSmall}
-	\caption{Удар по торцу. Вертикальный подграфик показывает зависимость нормального напряжения на левом торце  от времени.}
+	\includegraphics[width=0.85\linewidth]{figures/Impact2Small}
+	\caption{Удар по торцу (верхний график) и по боковой поверхности (нижний график) в стержне из полистирола. Вертикальный и горизонтальные подграфики показывают зависимость нормального напряжения на поверхности от времени и координаты $x$. При ударе по торцу напряжение задано одинаковым на всей площади торца.}
 	\label{fig:impact}
-	\vspace{-3mm}
+	\vspace{-1mm}
 \end{figure}
-\begin{figure}[h!]
-	\centering
-	\includegraphics[width=0.85\linewidth]{figures/SurfImpactSmall}
-	\caption{Удар по боковой поверхности. Вертикальный и горизонтальные подграфики показывают зависимость нормального напряжения на боковой поверхности от времени и координаты $x$.}
-	\label{fig:impact_surf}
-	\vspace{-7mm}
-\end{figure}
+
+На рисунках видно, что модель Буссинеска даёт результаты, схожие с полной моделью. Учитывая, что на рисунках \ref{fig:impact} амплитуды деформации являются достаточно большими в сравнении с пределом упругости и в реальных экспериментах амплитуды как правило на порядок меньше, то можно сделать вывод о хорошей применимости модели Буссинеска для моделирования возникновения солитонов.
 
 
 %\subsection{О применении полученных результатов для возбуждения солитонов}
