--- a/ThesisBrief.tex
+++ b/ThesisBrief.tex
@@ -128,7 +128,7 @@
 \begin{document}
 
 \begin{titlepage}
-	\newgeometry{top=20mm,bottom=15mm,left=25mm,right=15mm}
+	%\newgeometry{top=20mm,bottom=15mm,left=25mm,right=15mm}
 	
 	\begin{center}
 		\vspace*{80mm}
@@ -151,14 +151,13 @@
 	\end{flushleft}
 
 	
-	\vspace{50mm}
+	\vspace{55mm}
 	
 	\begin{center}
 		Санкт-Петербург\\2019
 	\end{center}
 	
 \end{titlepage}
-
 
 
 \section{Введение}
